objects/Part_Selector_Plastic_Clamps__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>AUTHORIZED_DISTRIBUTOR__c</fullName>
        <label>AUTHORIZED DISTRIBUTOR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CATALOG_NUMBER__c</fullName>
        <label>CATALOG NUMBER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cable_End_Range__c</fullName>
        <label>Cable End Range</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cable_Start_Range__c</fullName>
        <label>Cable Start Range</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELITE_DISTRIBUTOR__c</fullName>
        <label>ELITE DISTRIBUTOR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mounting_Version__c</fullName>
        <label>Mounting Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <label>Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRADE__c</fullName>
        <label>TRADE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Part Selector Plastic Clamps</label>
</CustomObject>